--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sync": "npx supabase gen types --lang=typescript --project-id \"oardfcrglfkgijnlqwmo\" --schema public > src/database/database.types.ts"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -15,6 +16,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.4",
+    "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "^20.10.8",
     "@types/react": "^18.2.47",
@@ -23,22 +25,26 @@
     "autoprefixer": "^10.4.12",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
+    "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "sharp": "0.33.1"
+    "sharp": "0.33.1",
+    "supabase": "^1.204.3"
   }
 }
