--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
     "dotenv": "^16.4.5",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
+    "katex": "^0.16.11",
     "next": "^14.0.4",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "zod": "^3.23.8"
