--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "sync": "npx supabase gen types --lang=typescript --project-id \"oardfcrglfkgijnlqwmo\" --schema public > src/database/database.types.ts"
+    "lint": "next lint"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -30,9 +29,7 @@
     "feed": "^4.2.2",
     "katex": "^0.16.11",
     "next": "^14.0.4",
-    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
-    "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
